--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,24 @@
-<ion-menu [content]="content">
+<ion-menu [content]="mainContent">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>
+        Menu
+      </ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+  <ion-content id="side-menu21" style="background-color:#0288D1;">
+    <ion-list id="menu-list1">
+      <ion-item color="none" menuClose="" on-click="goToPlay()" id="menu-list-item1">
+        Play
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToScore()" id="menu-list-item2">
+        Score
+      </ion-item>
+      <ion-item color="none" menuClose="" on-click="goToAbout()" id="menu-list-item3">
+        About
+      </ion-item>
     </ion-list>
   </ion-content>
-
 </ion-menu>
 
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav #mainContent [root]="rootPage"></ion-nav>
