--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,10 +9,10 @@
   <ion-content id="side-menu21" style="background-color:#0288D1;">
     <ion-list id="menu-list1">
       <ion-item color="none" menuClose="" on-click="goToPlay()" id="menu-list-item1">
-        Play
+        Quiz
       </ion-item>
       <ion-item color="none" menuClose="" on-click="goToScore()" id="menu-list-item2">
-        Score
+        Game
       </ion-item>
       <ion-item color="none" menuClose="" on-click="goToAbout()" id="menu-list-item3">
         About
